fix header alignment.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,31 +37,31 @@
   font-weight: 500;
 }
 
-.heroBanner_src-pages- {
+.hero__katan {
   text-align: left !important;
 }
 
-[data-theme=light] .heroBanner_src-pages- {
+[data-theme=light] .hero__katan {
   box-shadow: rgba(0, 0, 0, .12) 0 2px 7px -1px;
   background-color: #fafafa;
 }
 
-.heroBanner_src-pages- .katan-logo {
+.hero__katan .katan-logo {
   float: right;
 }
 
-.heroBanner_src-pages- .hero__title {
+.hero__katan .hero__title {
   margin-bottom: 0;
   margin-top: -18px;
 }
 
-.heroBanner_src-pages- .buttons_src-pages- .button {
+.hero__katan .buttons__katan .button {
   color: var(--ifm-color-primary) !important;
   border-color: var(--ifm-color-primary);
   text-transform: uppercase;
   font-size: 16px;
 }
 
-.buttons_src-pages- {
+.buttons__katan {
   justify-content: flex-start !important;
 }
